--- a/src/SingleListPage/ListMenu.css
+++ b/src/SingleListPage/ListMenu.css
@@ -8,6 +8,7 @@
   padding-top: 0.3em;
   padding-bottom: 0.3em;
   padding-left: 1em;
+  z-index: 1; /* z-index of TaskCard is 0, so we need to make ListMenu have z-index of 1 so that ListMenu hides TaskCard */
 }
 
 /* To make menu icons align horizontally */
