--- a/src/SingleListPage/TaskCard.css
+++ b/src/SingleListPage/TaskCard.css
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 0; /* z-index of ListMenu is 1, so we need to make TaskCard have z-index of 0 so that ListMenu hides TaskCard */
 }
 
 .task-card-completed h2,
